added highlight , complete and run